instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:28: error: not found: value foward
foward()/*case depart*/ 
^